@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tk.h,v 1.115 2008/08/12 15:14:42 dgp Exp $
+ * RCS: @(#) $Id: tk.h,v 1.116 2008/08/28 16:29:34 dgp Exp $
  */
 
 #ifndef _TK
@@ -53,10 +53,10 @@ extern "C" {
 #define TK_MAJOR_VERSION	8
 #define TK_MINOR_VERSION	6
 #define TK_RELEASE_LEVEL	TCL_ALPHA_RELEASE
-#define TK_RELEASE_SERIAL	2
+#define TK_RELEASE_SERIAL	3
 
 #define TK_VERSION		"8.6"
-#define TK_PATCH_LEVEL		"8.6a2"
+#define TK_PATCH_LEVEL		"8.6a3"
 
 /*
  * A special definition used to allow this header file to be included from
